...
                android:text="@string/roommates"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_roommates_add"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/plus_symbol"
                android:textSize="18sp"
...
